Removed useless(kinda) files

--- a/filesystem95/WINDOWS/SYSTEM.INI
+++ b/filesystem95/WINDOWS/SYSTEM.INI
@@ -74,7 +74,7 @@ gdi.exe=gdi.exe
 sound.drv=mmsound.drv
 dibeng.drv=dibeng.dll
 comm.drv=comm.drv
-shell=Bridge.exe
+shell=explorer.exe
 keyboard.drv=keyboard.drv
 fonts.fon=vgasys.fon
 fixedfon.fon=vgafix.fon
