--- a/filesystem95/WINDOWS/SYSTEM.INI
+++ b/filesystem95/WINDOWS/SYSTEM.INI
@@ -1,95 +1,8 @@
-[keyboard]
-subtype=
-type=4
-keyboard.dll=
-oemansi.bin=
-
-[boot.description]
-keyboard.typ=Standard 101/102-Key or Microsoft Natural Keyboard
-aspect=100,96,96
-display.drv=Standard Display Adapter (VGA)
-mouse.drv=Standard mouse
-system.drv=Standard PC
-
-[386Enh]
-ebios=*ebios
-device=*vshare
-device=*dynapage
-device=*vcd
-device=*vpd
-device=*int13
-keyboard=*vkd
-display=*vdd,*vflatd
-mouse=*vmouse, msmouse.vxd
-woafont=dosapp.fon
-
-[power.drv]
-
-[drivers]
-wavemapper=*.drv
-
-[iccvid.drv]
-
-[mciseq.drv]
-
-[mci]
-cdaudio=mcicda.drv
-sequencer=mciseq.drv
-waveaudio=mciwave.drv
-avivideo=mciavi.drv
-MPEGVideo=mciqtz.drv
-videodisc=mcipionr.drv
-vcr=mcivisca.drv
-
-[drivers32]
-VIDC.IV41=ir41_32.ax
-MSACM.MSNAUDIO=msnaudio.acm
-msacm.lhacm=lhacm.acm
-msacm.msg711=msg711.acm
-msacm.l3acm=l3codeca.acm
-VIDC.VDOM=vdowave.drv
-VIDC.MPG4=msscmc32.dll
-vidc.vivo=ivvideo.dll
-msacm.vivog723=vivog723.acm
-msacm.voxacm119=vdk32119.acm
-VIDC.TR20=tr2032.dll
-VIDC.UCOD=clrviddd.dll
-msacm.l3codec
-VIDC.IV50=ir50_32.dll
-msacm.iac2=C:\WINDOWS\SYSTEM\IAC25_32.AX
-
-[NonWindowsApp]
-
-[vcache]
-
-[display]
-
-
-
 [boot]
 system.drv=system.drv
-drivers=mmsystem.dll
-user.exe=user.exe
-gdi.exe=gdi.exe
-sound.drv=mmsound.drv
-dibeng.drv=dibeng.dll
-comm.drv=comm.drv
-shell=explorer.exe
-keyboard.drv=keyboard.drv
-fonts.fon=vgasys.fon
-fixedfon.fon=vgafix.fon
-oemfonts.fon=vgaoem.fon
 386Grabber=vgafull.3gr
-display.drv=pnpdrvr.drv
-mouse.drv=mouse.drv
 *DisplayFallback=0
+shell=explorer.exe
 
-[TTFontDimenCache]
-0 12=5 12
-0 13=6 12
-0 14=7 14
-0 15=7 15
-0 16=8 16
-0 18=10 18
-0 20=10 20
-0 22=12 22
+[386Enh]
+mouse=*vmouse
