--- a/emulator/package.json
+++ b/emulator/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
-    "parcel": "^2.2.1"
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "parcel": "^2.2.1",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-reconciler": "^0.26.2",
+    "scheduler": "^0.20.2"
   }
 }
