--- a/bridge/Makefile.win
+++ b/bridge/Makefile.win
@@ -7,12 +7,12 @@ WINDRES = windres.exe
 RES  = 
 OBJ  = main.o SerialComm.o $(RES)
 LINKOBJ  = main.o SerialComm.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -mwindows  
+LIBS =  -L"C:/Dev-Cpp/lib" -mwindows  -s 
 INCS =  -I"C:/Dev-Cpp/include" 
 CXXINCS =  -I"C:/Dev-Cpp/lib/gcc/mingw32/3.4.2/include"  -I"C:/Dev-Cpp/include/c++/3.4.2/backward"  -I"C:/Dev-Cpp/include/c++/3.4.2/mingw32"  -I"C:/Dev-Cpp/include/c++/3.4.2"  -I"C:/Dev-Cpp/include" 
 BIN  = bridge.exe
-CXXFLAGS = $(CXXINCS)  
-CFLAGS = $(INCS)  
+CXXFLAGS = $(CXXINCS)   -O3
+CFLAGS = $(INCS)   -O3
 RM = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
