--- a/tools/imgtool/Dockerfile
+++ b/tools/imgtool/Dockerfile
@@ -1,8 +1,6 @@
 FROM alpine:3.15.0
 
-RUN \
-  apk update &&\
-  apk add dosfstools mtools
+RUN  apk update && apk add dosfstools mtools
 
 COPY create.sh /
 RUN chmod +x /create.sh
