Fixed workflow again

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -39,4 +39,4 @@ jobs:
           automatic_release_tag: latest
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
           files: |
-            binaries/*
+            binaries/os.img
