--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "vercel-build": "./vercel-build.sh"
   },
   "dependencies": {
     "use-asset": "^1.0.4"
