Icon and Checkbox controls

--- a/win-runtime/bridge/Makefile
+++ b/win-runtime/bridge/Makefile
@@ -4,7 +4,7 @@ LINK  = link
 RES  = 
 OBJ  = main.obj SerialComm.obj RemoteCommand.obj $(RES)
 LINKOBJ  = main.obj SerialComm.obj RemoteCommand.obj $(RES)
-LIBS = /SUBSYSTEM:WINDOWS /LIBPATH:Z:\opt\vc\LIB user32.lib gdi32.lib
+LIBS = /SUBSYSTEM:WINDOWS /LIBPATH:Z:\opt\vc\LIB user32.lib gdi32.lib shell32.lib
 INCS =  /IZ:\opt\vc\INCLUDE
 CXXINCS =  /IZ:\opt\vc\INCLUDE
 BIN  = bridge.exe
