--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.3.5",
     "vite": "^2.7.10"
   }
