--- a/win-runtime/bridge/Makefile
+++ b/win-runtime/bridge/Makefile
@@ -2,8 +2,8 @@ CPP  = cl
 CC   = cl
 LINK  = link
 RES  = 
-OBJ  = main.obj SerialComm.obj RemoteCommand.obj $(RES)
-LINKOBJ  = main.obj SerialComm.obj RemoteCommand.obj $(RES)
+OBJ  = main.obj SerialComm.obj RemoteCommand.obj MouseReceiver.obj $(RES)
+LINKOBJ  = main.obj SerialComm.obj RemoteCommand.obj MouseReceiver.obj $(RES)
 LIBS = /SUBSYSTEM:WINDOWS /LIBPATH:Z:\opt\vc\LIB user32.lib gdi32.lib shell32.lib
 INCS =  /IZ:\opt\vc\INCLUDE
 CXXINCS =  /IZ:\opt\vc\INCLUDE
@@ -28,3 +28,6 @@ SerialComm.obj: SerialComm.cpp
 
 RemoteCommand.obj: RemoteCommand.cpp
 	$(CPP) /c RemoteCommand.cpp /FeRemoteCommand.obj $(CXXFLAGS)
+
+MouseReceiver.obj: MouseReceiver.cpp
+	$(CPP) /c MouseReceiver.cpp /FeMouseReceiver.obj $(CXXFLAGS)
