--- a/win-runtime/filesystem/WINDOWS/SYSTEM.INI
+++ b/win-runtime/filesystem/WINDOWS/SYSTEM.INI
@@ -25,7 +25,7 @@ oemansi.bin=
 [boot.description]
 keyboard.typ=Standard 101/102-Key or Microsoft Natural Keyboard
 aspect=100,96,96
-display.drv=VBE Miniport - Standard Graphics Adapter (VGA)
+display.drv=JavaScript Standard Graphics Adapter
 mouse.drv=Standard mouse
 system.drv=Standard PC
 
