--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ __tests__/__image_snapshots__/__diff_output__
 *.obj
 !win-runtime/filesystem/**/*
 !win-runtime/filesystem-reg/**/*
+!win-runtime/utils
 win-runtime/filesystem/**/bridge.exe
 win-runtime/filesystem/**/SYSTEM.DAT
 win-runtime/filesystem/**/USER.DAT
