--- a/win-runtime/filesystem/WINDOWS/SYSTEM.INI
+++ b/win-runtime/filesystem/WINDOWS/SYSTEM.INI
@@ -38,8 +38,7 @@ device=*vpd
 device=*int13
 keyboard=*vkd
 display=*vdd,*vflatd
-mouse=*vmouse, msmouse.vxd
-device=*vpowerd
+mouse=*vmouse
 woafont=dosapp.fon
 
 [power.drv]
