--- a/win-runtime/filesystem-optional/WINDOWS/SYSTEM.INI
+++ b/win-runtime/filesystem-optional/WINDOWS/SYSTEM.INI
@@ -6,7 +6,7 @@ gdi.exe=gdi.exe
 sound.drv=mmsound.drv
 dibeng.drv=dibeng.dll
 comm.drv=comm.drv
-shell=bridge.exe
+shell=Explorer.exe
 keyboard.drv=keyboard.drv
 fonts.fon=vgasys.fon
 fixedfon.fon=vgafix.fon
